@@ -43,18 +43,19 @@
       L91 ,  2:R#.2    @一些游戏资料
       L131,  3:R#.3    @对 button up 以及 down 的控制
       L157,  4:R#.4    @添加 ai by exmples
-     Zndex_E : //z 2015-06-24 11:02:24 L.190'46656 T3876230028.K ~57  +----+----+----+----+----+
+     Zndex_E : //z 2015-09-08 21:58:43 L.114'7277  T3342345214.K ~58  +----+----+----+----+----+
      TimeCnt : //z 2015-06-12 16:36:39 L.202'26601 T3669255931.K ~2   +----+----+----+----+----+
      Reg.Cnt : //z 2015-06-24 11:01:33 L.190'46707 T3876194123.K ~4   +----+----+----+----+----+
      #4   R+ : //z 2015-06-24 11:01:33 L.190'46707 T3876194123.K ~4     V+.52   L+.157  
      #3   R+ : //z 2015-06-12 16:36:36 L.202'26604 T3669255928.K ~3     V+.32   L+.126  
      #2   R+ : //z 2015-05-07 13:31:39 L.238'37701 T859572662 .K ~2     V+.25   L+.82   
      #1   R+ : //z 2015-05-07 13:13:44 L.238'38776 T857272722 .K ~1     V+.3    L+.62   
-     File.Op : //z 2015-06-24 11:01:26 L.190'46714 T3876194093.K ~3   +----+----+----+----+----+
+     File.Op : //z 2015-09-08 21:58:28 L.114'7292  T3342345153.K ~4   +----+----+----+----+----+
+     #4   O+ : //z 2015-09-08 21:58:28 L.114'7292  T3342345153.K ~4     V+.62   L+.1    
      #3   O+ : //z 2015-06-24 11:01:26 L.190'46714 T3876194093.K ~3     V+.50   L+.1    
      #2   O+ : //z 2015-06-12 16:36:32 L.202'26608 T3669255924.K ~2     V+.30   L+.1    
      #1   O+ : //z 2015-05-07 13:31:33 L.238'37707 T859572656 .K ~1     V+.24   L+.1    
-     Version : //z 2015-06-24 11:02:24 L.190'46656 T3876230028.K ~61    R+.4    L+.161  --+----+
+     Version : //z 2015-09-08 21:58:43 L.114'7277  T3342345214.K ~62    R+.-1   L+.20   --+----+
      #3   V+ : //z 2015-06-24 11:02:02 L.190'46678 T3876229960.K ~57    R+.4    L+.159  
      #2   R+ : //z 2015-06-24 11:01:33 L.190'46707 T3876194123.K ~52    R+.4    L+.158  V+.52   
      #2   V+ : //z 2015-06-12 16:37:14 L.202'26566 T3669291797.K ~38    R+.3    L+.131  
